--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "mocha": "~1.18.2",
-    "nodemon": "~1.0.17"
+    "nodemon": "~1.0.17",
+    "should": "~3.3.0",
+    "supertest": "~0.10.0"
   }
 }
