Add url shortening for shared notes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "passport-local": "~0.1.6",
     "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
-    "node-tesseract": "~0.2.4"
+    "node-tesseract": "~0.2.4",
+    "shortid": "~2.0.0"
   },
   "devDependencies": {
     "mocha": "~1.18.2",
